compiler/testData/cli/jvm/recordAsSingleFileRoot.out
compiler/testData/cli/jvm/recordAsSingleFileRoot.kt:5:14: error: unresolved reference 'Unresolved'.
fun error(): Unresolved? = null
             ^
COMPILATION_ERROR
